# benchmarks

./: .clang-format  CMakeLists.txt  product.cpp  simd_sum.cpp  sort.cpp
